# oracle

./: Anchor.toml  Cargo.toml  package.json
docs/: instructions.md
operator/: Cargo.toml  README.md  Secrets.example.toml
operator/src/: main.rs
operator/src/client/: mod.rs
operator/src/constants/: mod.rs
operator/src/contexts/: mod.rs
operator/src/helpers/: mod.rs
oracle-cli/: Cargo.toml
oracle-cli/src/: main.rs
oracle-cli/src/helpers/: mod.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: errors.rs  lib.rs
programs/oracle/src/constants/: mod.rs
programs/oracle/src/contexts/: mod.rs  operator_remove.rs  oracle_delete.rs  oracle_update.rs
programs/oracle/src/state/: oracle.rs
programs/wba-oracle/: Cargo.toml
programs/wba-oracle/src/: lib.rs
programs/wba-oracle/src/contexts/: operator_add.rs  oracle_create.rs  oracle_update.rs
programs/wba-oracle/src/state/: mod.rs  oracle.rs
tests/: oracle.ts  wba-oracle.ts
